pkg/utils/testdata/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: wkp-nginx
    nginx.ingress.kubernetes.io/rewrite-target: /github/$1
  labels:
    app: github-service
  name: github-service
  namespace: wkp-github-service
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: github-service
          servicePort: 8000
        path: /github/?(.*)
